# wasm-weight-tracker

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml  index.js
ci/: azure-install-rust.yml  setup-git.sh
collector/: Cargo.toml
collector/src/: main.rs
html/: index.html  index.js  style.css
shared/: Cargo.toml
shared/src/: lib.rs
site/: Cargo.toml
site/src/: main.rs
