[package]
name = "collector"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"

[dependencies]
tempfile = "3.0"
failure = "0.1"
env_logger = { version = '0.6', default-features = false }
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ['derive'] }
flate2 = "1.0"
docopt = "1.0"
