[package]
name = "site"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"

[dependencies]
docopt = "1.0"
env_logger = { version = '0.6', default-features = false }
failure = "0.1"
flate2 = "1.0"
iso8601 = "0.3"
log = "0.4"
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
shared = { path = '../shared' }
